@@ -1,5 +1,12 @@
 2011-05-21  James Youngman  <jay@gnu.org>
 
+	Set TZ=GMT in the y2k tests.
+	* tests/year-2000/ext.sh: Set $TZ to GMT in order to make it
+	possible for implementations which convert SCCS file dates to
+	time_t values (but which otherwise have no bugs) to pass the
+	tests.
+	* tests/year-2000/prs-y2k.sh: Likewise.
+
 	Remove spurious space in definition of admin.
 	* tests/common/command-names (admin): remove spurious space.
 
